--- a/client/css/index.css
+++ b/client/css/index.css
@@ -13,11 +13,18 @@
 
 #username-corner {
 	position: absolute;
-	top: 0;
-	right: 0;
+	top: -10px;
+	right: 0px;
 	margin: 20px;
 	display: none;
 }
+
+.button:visited {
+    color: #333 !important;
+    background-color: #fff !important;
+    border-color: #ccc !important;
+}
+    
 
 #error-msg {
 	color: red;
