--- a/client/css/whiteboard.css
+++ b/client/css/whiteboard.css
@@ -1,8 +1,16 @@
+html, body {
+	height: 100%;
+}
+
 #whiteboard-row {
 	display: none;
+	min-height: 50%;
 }
 
 #whiteboard {
 	background-image: url("images/background.jpeg");
 	border: 1px solid red;
+	width: 100%;
+	height: 100%;
+	min-height: 100%;
 }
