--- a/client/css/whiteboard.css
+++ b/client/css/whiteboard.css
@@ -8,9 +8,10 @@ html, body {
 }
 
 #whiteboard {
-	background-image: url("images/background.jpeg");
-	border: 1px solid red;
-	width: 100%;
-	height: 100%;
-	min-height: 100%;
+	background-image: url("../images/background.jpeg");
+	height: 95%;
+	border: 1px solid #ccc;
+	min-height: 95%;
+	position: absolute;
+	top: 4%;
 }
