--- a/client/css/whiteboard.css
+++ b/client/css/whiteboard.css
@@ -15,12 +15,12 @@ html, body {
     width: 80%;
     position: absolute;
     left: 0;
-    top: 31px;
+    top: 41px;
 }
 
 #topbar {
 	width: 100%;
-    height: 30px;
+    height: 40px;
     position: absolute;
     background-color: green;
     left: 0px;
@@ -52,8 +52,8 @@ html, body {
     display: inline-block;
     margin: 0;
     position: absolute;
-    right: 0px;
-    top: 2px;
+    right: 6px;
+    top: 5px;
     bottom: 0px;
     padding: 0;
 }
@@ -69,6 +69,30 @@ html, body {
 }
 
 #chat {
-	min-height: 100%;
-	border: 1px solid red;
+	min-height: 95%;
+    position: absolute;
+    right: 0;
+    width: 20%;
+    top: 40px;
+}
+
+#chat-bar {
+	display: inline-block;
+    position: absolute;
+    right: 0;
+    width: 20%;
+}
+
+#users-online {
+	display: inline-block;
+    width: 86%;
+    position: relative;
+    top: 3px;
+    left: 6px;
+}
+
+#minimize-chat {
+	float: right;
+	margin: 10px;
+	cursor: pointer;
 }
