--- a/client/css/whiteboard.css
+++ b/client/css/whiteboard.css
@@ -151,7 +151,7 @@ html, body {
     margin-left: 8px;
 }
 
-#logout, #refresh {
+#logout, #refresh, #blank {
 	cursor: pointer;
 	margin-right: 10px;
 }
