Made some changes

--- a/client/css/whiteboard.css
+++ b/client/css/whiteboard.css
@@ -151,7 +151,7 @@ html, body {
     margin-left: 8px;
 }
 
-#toolbar-brushWidth {
+#toolbar-brushTools {
 	position: absolute;
 	bottom: 20%;
 	width: 50px;
